# PillarLense

./: .gitignore  README.md  pyproject.toml  requirements.txt
pillar_lense/: __init__.py  app.py  models.py  processing.py
scripts/: run_app.bat  run_app.sh  setup_venv.bat  setup_venv.sh
tests/: test_models.py  test_processing.py
